--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -295,8 +295,7 @@
                             <ul>
                                 <li><a class="active" href="/">Home</a>
                                 </li>
-                                <li><a href="page-about.html">About</a></li>
-                                <li><a href="#">Contact </a>
+                                
                                   
                                 <li class="position-static"><a href="/shop">Shop</i></a>
                                     <ul class="mega-menu">
@@ -352,7 +351,8 @@
                                         </li>
                                     </ul>
                                 </li>
-                                
+                                <li><a href="page-about.html">About</a></li>
+                                <li><a href="#">Contact </a>  </li>
                         
                             </ul>
                         </nav>
@@ -470,8 +470,7 @@
                 <nav>
                     <ul class="mobile-menu">
                         <li class="menu-item-has-children"><span class="menu-expand"></span><a href="index.html">Home</a> </li>
-                        <li class="menu-item-has-children"><span class="menu-expand"></span><a href="#">About</a></li>
-                        <li class="menu-item-has-children"><span class="menu-expand"></span><a href="#">Contact</a></li>
+                        
                         <li class="menu-item-has-children"><span class="menu-expand"></span><a href="/shop">Shop</a>
                             <ul class="dropdown">
                                 <li class="menu-item-has-children"><span class="menu-expand"></span><a href="#">Women's Fashion</a>
@@ -503,6 +502,8 @@
                                 </li>
                             </ul>
                         </li>
+                        <li class="menu-item-has-children"><span class="menu-expand"></span><a href="#">About</a></li>
+                        <li class="menu-item-has-children"><span class="menu-expand"></span><a href="#">Contact</a></li>
                         <!-- <li class="menu-item-has-children"><span class="menu-expand"></span><a href="blog-category-fullwidth.html">Blog</a>
                             <ul class="dropdown">
                                 <li><a href="blog-category-grid.html">Blog Category Grid</a></li>
