--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -15,7 +15,7 @@
             <section class="mt-50 mb-50">
                 <div class="container">
                     <div class="row flex-row-reverse">
-                        <div class="col-lg-9">
+                        <div class="col-9">
                             <div class="shop-product-fillter style-2">
                                 <div class="totall-product">
                                     <p> We found <strong class="text-brand">688</strong> items for you!</p>
@@ -27,14 +27,14 @@
                                                 <span><i class="fi-rs-apps"></i>Show:</span>
                                             </div>
                                             <div class="sort-by-dropdown-wrap">
-                                                <span> 50 <i class="fi-rs-angle-small-down"></i></span>
+                                                <span> 10 <i class="fi-rs-angle-small-down"></i></span>
                                             </div>
                                         </div>
                                         <div class="sort-by-dropdown">
                                             <ul>
-                                                <li><a class="active" href="#">50</a></li>
+                                                <li><a class="active" href="#">10</a></li>
+                                                <li><a href="#">50</a></li>
                                                 <li><a href="#">100</a></li>
-                                                <li><a href="#">150</a></li>
                                                 <li><a href="#">200</a></li>
                                                 <li><a href="#">All</a></li>
                                             </ul>
@@ -51,13 +51,18 @@
                                         </div>
                                         <div class="sort-by-dropdown">
                                             <ul>
-                                                <li><a class="active" href="#">Featured</a></li>
-                                                <li><a href="#">Price: Low to High</a></li>
-                                                <li><a href="#">Price: High to Low</a></li>
-                                                <li><a href="#">Release Date</a></li>
-                                                <li><a href="#">Avg. Rating</a></li>
+                                                <li><a class="active" href="?sort=featured">Featured</a></li>
+                                                <li><a href="?sort=priceinc">Price: Low to High</a></li>
+                                                <li><a href="?sort=priceDesc">Price: High to Low</a></li>
+                                                <li><a href="?sort=releaseDate">Release Date</a></li>
+                                                <li><a href="?sort=avgRating">Avg. Rating</a></li>
+                                                <li><a href="?sort=popularity">Popularity</a></li>
+                                                <li><a href="?sort=newArrivals">New Arrivals</a></li>
+                                                <li><a href="?sort=az">A-Z</a></li>
+                                                <li><a href="?sort=za">Z-A</a></li>
                                             </ul>
                                         </div>
+
                                     </div>
                                 </div>
                             </div>
@@ -66,7 +71,7 @@
                                     aria-labelledby="tab-one">
                                     <div class="row product-grid-4">
                                         <% for(let i=0; i<products.length; i++) { %>
-                                            <div class="col-4">
+                                            <div class="col-lg-3 col-md-4 col-sm-6  col-6">
                                                 <div class="product-cart-wrap mb-30">
                                                     <div class="product-img-action-wrap">
                                                         <div class="product-img product-img-zoom">
@@ -145,31 +150,24 @@
                                     </div>
                                 </div>
                             </div>
-                            <!--pagination-->
-                            <div class="pagination-area mt-15 mb-sm-5 mb-lg-0">
-                                <nav aria-label="Page navigation example">
-                                    <ul class="pagination justify-content-start">
-                                        <li class="page-item active"><a class="page-link" href="#">01</a></li>
-                                        <li class="page-item"><a class="page-link" href="#">02</a></li>
-                                        <li class="page-item"><a class="page-link" href="#">03</a></li>
-                                        <li class="page-item"><a class="page-link dot" href="#">...</a></li>
-                                        <li class="page-item"><a class="page-link" href="#">16</a></li>
-                                        <li class="page-item"><a class="page-link" href="#"><i
-                                                    class="fi-rs-angle-double-small-right"></i></a></li>
-                                    </ul>
-                                </nav>
-                            </div>
+
+
+
+
+
                         </div>
-                        <div class="col-lg-3 primary-sidebar sticky-sidebar">
+                        <div class="col-3 primary-sidebar sticky-sidebar ">
                             <div class="widget-category mb-30">
-                                <h5 class="section-title style-1 mb-30 wow fadeIn animated">Category</h5>
-                                <ul class="categories">
+                                <label for="category">Category</label>
+                                <select class="form-control" id="categoryFilter" name="categoryFilter">
+                                    <option value="">-----Choose category-----</option>
                                     <% products.forEach(function(product) { %>
-                                        <li><a href="#">
-                                                <%= product.category.categoryName%>
-                                            </a></li>
+                                        <option value="<%= product.category._id %>">
+                                            <%= product.category.categoryName %>
+                                        </option>
                                         <% }); %>
-                                </ul>
+                                </select>
+
                             </div>
                             <!-- Fillter By Price -->
                             <div class="sidebar-widget price_range range mb-30">
@@ -188,26 +186,37 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!-- <div class="list-group">
+                                <div class="list-group">
                                     <div class="list-group-item mb-10 mt-10">
-                                        <label class="fw-900">Color</label>
+                                        <label class="fw-900">Size</label>
                                         <div class="custome-checkbox">
                                             <input class="form-check-input" type="checkbox" name="checkbox"
-                                                id="exampleCheckbox1" value="">
-                                            <label class="form-check-label" for="exampleCheckbox1"><span>Red
-                                                    (56)</span></label>
+                                                id="exampleCheckbox1" value="S">
+                                            <label class="form-check-label" for="exampleCheckbox1"><span>
+                                                    S</span></label>
                                             <br>
                                             <input class="form-check-input" type="checkbox" name="checkbox"
-                                                id="exampleCheckbox2" value="">
-                                            <label class="form-check-label" for="exampleCheckbox2"><span>Green
-                                                    (78)</span></label>
+                                                id="exampleCheckbox2" value="M">
+                                            <label class="form-check-label"
+                                                for="exampleCheckbox2"><span>M</span></label>
                                             <br>
                                             <input class="form-check-input" type="checkbox" name="checkbox"
-                                                id="exampleCheckbox3" value="">
-                                            <label class="form-check-label" for="exampleCheckbox3"><span>Blue
-                                                    (54)</span></label>
+                                                id="exampleCheckbox3" value="L">
+                                            <label class="form-check-label" for="exampleCheckbox3"><span>
+                                                    L</span></label>
+                                            <br>
+                                            <input class="form-check-input" type="checkbox" name="checkbox"
+                                                id="exampleCheckbox4" value="XL">
+                                            <label class="form-check-label"
+                                                for="exampleCheckbox4"><span>XL</span></label>
+                                            <br>
+                                            <input class="form-check-input" type="checkbox" name="checkbox"
+                                                id="exampleCheckbox5" value="XXL">
+                                            <label class="form-check-label"
+                                                for="exampleCheckbox5"><span>XXL</span></label>
+                                            <br>
                                         </div>
-                                        <label class="fw-900 mt-15">Item Condition</label>
+                                        <!-- <label class="fw-900 mt-15">Item Condition</label>
                                         <div class="custome-checkbox">
                                             <input class="form-check-input" type="checkbox" name="checkbox"
                                                 id="exampleCheckbox11" value="">
@@ -223,15 +232,51 @@
                                                 id="exampleCheckbox31" value="">
                                             <label class="form-check-label" for="exampleCheckbox31"><span>Used
                                                     (45)</span></label>
-                                        </div>
+                                        </div> -->
                                     </div>
-                                </div> -->
-                                <a href="#" class="btn btn-sm btn-default"><i class="fi-rs-filter mr-5"></i> Fillter</a>
+                                </div>
+
+                                <a href="#" class="btn-sm btn-default" id="applyFilterBtn">
+                                    <span class="d-none d-sm-inline"><i class="fi-rs-filter"></i> Filter</span>
+                                </a>
+
                             </div>
 
                         </div>
                     </div>
                 </div>
+                <!-- Pagination -->
+                <div class="pagination-area mt-30 mb-50" id="pagination-container">
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination justify-content-end">
+                            <% if (currentPage> 1) { %>
+                                <li class="page-item"><a class="page-link" onclick="changePage(1)"><i
+                                            class="material-icons md-chevron_left"></i></a></li>
+                                <% } %>
+
+                                    <% for (let i=1; i <=totalPages; i++) { %>
+                                        <% if (i===currentPage) { %>
+                                            <li class="page-item active"><a class="page-link"
+                                                    onclick="changePage(`<%= i %>`)">
+                                                    <%= i %>
+                                                </a></li>
+                                            <% } else { %>
+                                                <li class="page-item"><a class="page-link"
+                                                        onclick="changePage(`<%= i %>`)">
+                                                        <%= i %>
+                                                    </a></li>
+                                                <% } %>
+                                                    <% } %>
+                                                        <% if (currentPage < totalPages) { %>
+                                                            <li class="page-item"><a class="page-link"
+                                                                    onclick="changePage(`<%= totalPages %>`)"><i
+                                                                        class="material-icons md-chevron_right"></i></a>
+                                                            </li>
+                                                            <% } %>
+                        </ul>
+                    </nav>
+                </div>
+
             </section>
         </main>
 
@@ -390,5 +435,32 @@
                                     }
                                 });
                         }
+
+
+                        function changePage(page) {
+                            const sort = '<%= sort %>'; // Assuming sort is available in the template context
+                            const filter = '<%= filter %>'; // Assuming filter is available in the template context
+
+                            fetch(`/shop?page=${page}&sort=${sort}&filter=${filter}`, {
+                                method: 'GET',
+                                headers: {
+                                    'Content-Type': 'application/json',
+                                },
+                            })
+                                .then(response => response.text())
+                                .then(data => {
+                                    // Assuming the server returns the new content as HTML
+                                    // Replace the content of the pagination container with the new content
+                                    document.getElementById('pagination-container').innerHTML = data;
+                                })
+                                .catch(error => console.error('Error:', error));
+                        }
+
+
+
+
+
+
+
 
                     </script>
