--- a/views/adminLayouts/navbar.ejs
+++ b/views/adminLayouts/navbar.ejs
@@ -56,7 +56,7 @@
                     </div>
                 </li>
                 <li class="menu-item has-submenu" id="dashboardMenuItem">
-                    <a class="menu-link" href="page-transactions-1.html">
+                    <a class="menu-link" href="">
                         <i class="icon material-icons md-trending_up"></i>
                         <span class="text">Sales</span>
                     </a>
@@ -66,17 +66,19 @@
                 </li>
                 
                 <li class="menu-item has-submenu" id="dashboardMenuItem">
-                    <a class="menu-link" href="page-transactions-1.html">
+                    <a class="menu-link" href="">
                         <i class="icon material-icons md-local_offer"></i>
                         <span class="text">Coupons</span>
                     </a>
                     <div class="submenu">
-                        <a href="">Add Coupon</a>
+                        <a href="/admin/coupon/couponList">List Coupon</a>
+                        <a href="/admin/coupon/addCoupon">Add Coupon</a>
+
                     </div>
                 </li>
                 
                 <li class="menu-item has-submenu" id="dashboardMenuItem">
-                    <a class="menu-link" href="page-transactions-1.html">
+                    <a class="menu-link" href="">
                         <i class="icon material-icons md-attach_money"></i>
                         <span class="text">Offers</span>
                     </a>
